[package]
name = "host-lint"
version = "0.5.0"
edition = "2021"
description = "Detect phase-synonym agentic tells in commits, headers, and comments"
license = "Unlicense"

[dependencies]
host-grammar = { git = "https://github.com/connollydavid/host-grammar", rev = "8091261" }

# `cargo kani` sets cfg(kani) for the #[cfg(kani)] proof harnesses in src/lib.rs.
# Declare it a known cfg so the normal build doesn't warn. Lints don't affect
# codegen, so the release artifact stays byte-identical (CI's --verify-build proves it).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
proptest = "1.5"

# Reproducible builds: strip symbols and the .comment section (which embed the build
# host's toolchain/distro). Combined with --build-id=none (.cargo/config.toml), the
# release binary carries no build-environment metadata, so it hashes the same anywhere.
[profile.release]
strip = true
