[package]
name = "host-lint"
version = "0.12.0"
edition = "2021"
description = "Detect phase-synonym agentic tells in commits, headers, and comments"
license = "Unlicense"

[dependencies]
host-grammar = { git = "https://github.com/connollydavid/host-grammar", rev = "9470b81c9c851b0fedc872203437ea0de60b7f62" }

# `cargo kani` sets cfg(kani) for the #[cfg(kani)] proof harnesses in src/lib.rs.
# Declare it a known cfg so the normal build doesn't warn. Lints don't affect
# codegen, so the release artifact stays byte-identical. The canonical artifact is
# built in the digest-pinned muslrust image with locked deps and recorded in
# .host-software (agentic-host), where `host-lifecycle software --verify-build`
# re-derives it byte-for-byte at re-pin; the release CI builds the published
# linux-amd64 asset by the same pinned recipe so the two match.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
proptest = "1.5"

# Reproducible builds: strip symbols and the .comment section (which embed the build
# host's toolchain/distro). Combined with --build-id=none (.cargo/config.toml), the
# release binary carries no build-environment metadata, so it hashes the same anywhere.
[profile.release]
strip = true
